[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/macchi-m5.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/player02.gd" type="Script" id=2]
[ext_resource path="res://Scripts/cameras.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Gravats.gd" type="Script" id=4]
[ext_resource path="res://Scenes/plateau01.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 150.0
height = 150.0

[sub_resource type="CapsuleShape" id=2]
radius = 100.0
height = 100.0

[sub_resource type="CapsuleShape" id=10]
radius = 120.0
height = 120.0

[sub_resource type="CapsuleMesh" id=3]
radius = 100.0
mid_height = 100.0
rings = 16

[sub_resource type="OpenSimplexNoise" id=4]
seed = 2
octaves = 7
period = 53.3
persistence = 0.875

[sub_resource type="NoiseTexture" id=5]
as_normalmap = true
noise = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 0.12549, 0.85098, 0.309804, 1 )
albedo_texture = SubResource( 5 )
normal_enabled = true
normal_scale = 1.0

[sub_resource type="CapsuleShape" id=7]
height = 3.55897

[sub_resource type="SphereShape" id=11]
radius = 5.0

[sub_resource type="SphereMesh" id=12]
radius = 5.0
height = 10.0

[node name="Scene02" type="Spatial"]
script = ExtResource( 3 )

[node name="Area" type="Area" parent="."]
space_override = 3
gravity_point = true

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="StaticBodyPlanete" type="StaticBody" parent="."]

[node name="PlanetCol100" type="CollisionShape" parent="StaticBodyPlanete"]
shape = SubResource( 2 )

[node name="PlanetCol120" type="CollisionShape" parent="StaticBodyPlanete"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBodyPlanete"]
mesh = SubResource( 3 )
material/0 = SubResource( 6 )

[node name="player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 103.39, -6 )
script = ExtResource( 2 )
speed = 8.0
rot_speed = 1.8
jump_power = 15.0
mass = 15.0

[node name="RayCast" type="RayCast" parent="player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.950813, 0 )
enabled = true
cast_to = Vector3( 0, -50, 0 )

[node name="CollisionShape" type="CollisionShape" parent="player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.196053, 0.518992 )
shape = SubResource( 7 )

[node name="positionCamera" type="Position3D" parent="player"]
transform = Transform( 1, 0, 0, 0, 0.799381, 0.600825, 0, -0.600825, 0.799381, 0, 13.3002, 17.9435 )

[node name="Camera" type="Camera" parent="player/positionCamera"]
current = true

[node name="GlobalCamera" type="Camera" parent="."]
transform = Transform( 0.00235618, 0, -0.999997, 0, 1, 0, 0.999997, 0, 0.00235618, -934.217, 9.24023, 1.47278 )
fov = 23.3
far = 5000.0

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
target = NodePath("../player/positionCamera")
speed = 8.0
enabled = true

[node name="Gravats" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 107.036, -23.3641 )
gravity_scale = 5.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Gravats"]
shape = SubResource( 11 )

[node name="MeshInstance" type="MeshInstance" parent="Gravats"]
mesh = SubResource( 12 )
material/0 = null

[node name="plateau01" parent="." instance=ExtResource( 5 )]
